--- a/legal.html
+++ b/legal.html
@@ -26,63 +26,6 @@
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
 
-
-    <style>
-        .s-legal {
-            padding-top: var(--vspace-5);
-            padding-bottom: var(--vspace-5);
-            background-color: #fff;
-        }
-
-        .legal-content {
-            max-width: 800px;
-            margin: 0 auto;
-            color: var(--color-text);
-        }
-
-        .legal-content h1 {
-            margin-bottom: 4rem;
-            text-align: center;
-        }
-
-        .legal-content h2 {
-            margin-top: 5rem;
-            margin-bottom: 2.4rem;
-            color: var(--color-text-dark);
-            font-size: 2.4rem;
-        }
-
-        .legal-content p,
-        .legal-content li {
-            font-size: 1.7rem;
-            line-height: 1.8;
-            margin-bottom: 2rem;
-        }
-
-        .legal-content ul {
-            margin-left: 2.4rem;
-            margin-bottom: 3rem;
-        }
-
-        .legal-back {
-            display: inline-flex;
-            align-items: center;
-            gap: 1rem;
-            margin-bottom: 4rem;
-            font-weight: 700;
-            text-transform: uppercase;
-            letter-spacing: 0.2em;
-            font-size: 1.2rem;
-            color: var(--color-1);
-        }
-
-        .legal-back svg {
-            width: 16px;
-            height: 16px;
-            fill: currentColor;
-        }
-    </style>
-
     <!-- favicons
     ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -269,8 +212,7 @@
         <div id="cookie-banner" class="cookie-banner">
             <h4>We Value Your Privacy</h4>
             <p>We use cookies to enhance your browsing experience and analyze our traffic. By clicking "Accept", you
-                consent to our use of cookies. <a href="legal.html"
-                    style="color: var(--color-1); text-decoration: underline;">Learn more</a></p>
+                consent to our use of cookies. <a href="legal.html" class="link-primary-underline">Learn more</a></p>
             <div class="cookie-banner__buttons">
                 <button class="cookie-banner__btn cookie-banner__btn--accept" onclick="acceptCookies()">Accept</button>
                 <button class="cookie-banner__btn cookie-banner__btn--decline"
