--- a/blog-single.html
+++ b/blog-single.html
@@ -69,225 +69,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
 
-    <style>
-        .s-article {
-            padding-top: var(--vspace-5);
-            padding-bottom: var(--vspace-5);
-        }
 
-        .article-header {
-            text-align: center;
-            margin-bottom: var(--vspace-4);
-        }
-
-        .article-header__category {
-            display: inline-block;
-            padding: 0.6rem 2rem;
-            border: 1px solid #ccc;
-            border-radius: 50px;
-            font-size: 1.2rem;
-            text-transform: uppercase;
-            letter-spacing: .15rem;
-            margin-bottom: 2rem;
-        }
-
-        .article-header__title {
-            font-size: 5rem;
-            margin-bottom: 2rem;
-            line-height: 1.2;
-        }
-
-        .article-header__meta {
-            display: flex;
-            justify-content: center;
-            gap: 3rem;
-            font-size: 1.4rem;
-            color: #666;
-        }
-
-        .article-featured-image {
-            width: 100%;
-            max-height: 600px;
-            object-fit: cover;
-            border-radius: 20px;
-            margin-bottom: var(--vspace-3);
-        }
-
-        .article-content {
-            max-width: 800px;
-            margin: 0 auto;
-            font-size: 1.8rem;
-            line-height: 1.8;
-        }
-
-        .article-content p {
-            margin-bottom: 2rem;
-        }
-
-        .article-back {
-            display: inline-flex;
-            align-items: center;
-            gap: 1rem;
-            font-weight: 700;
-            margin-bottom: var(--vspace-2);
-        }
-
-        .article-back svg {
-            width: 20px;
-            height: 20px;
-        }
-
-        /* Skeleton */
-        .skeleton {
-            background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
-            background-size: 200% 100%;
-            animation: 1.5s shine linear infinite;
-        }
-
-        @keyframes shine {
-            to {
-                background-position-x: -200%;
-            }
-        }
-
-        /* CTA Button Fix */
-        .s-header__cta .btn.s-header__cta-btn {
-            background-color: var(--color-1) !important;
-            border-color: var(--color-1) !important;
-            color: #ffffff !important;
-            transition: all 0.3s ease;
-        }
-
-        .s-header__cta .btn.s-header__cta-btn:hover {
-            background-color: var(--color-1-dark) !important;
-            border-color: var(--color-1-dark) !important;
-            transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-        }
-
-        .sticky .s-header__cta .btn.s-header__cta-btn {
-            background-color: var(--color-1) !important;
-            border-color: var(--color-1) !important;
-            opacity: 1;
-        }
-
-        /* Force Header Fixed on subpages */
-        .s-header.sticky {
-            position: fixed !important;
-            opacity: 1 !important;
-            visibility: visible !important;
-            background-color: var(--color-gray-19) !important;
-            transform: translateY(0) !important;
-            top: 0 !important;
-        }
-
-        .s-header__inner {
-            opacity: 1 !important;
-            transform: translateY(0) !important;
-        }
-
-        /* Comments Styling */
-        .article-comments {
-            padding-top: var(--vspace-4);
-            max-width: 800px;
-            margin: 4rem auto 0;
-            border-top: 1px solid var(--color-gray-4);
-        }
-
-        .comments-list {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        .comment-item {
-            padding: 3rem 0;
-            border-bottom: 1px solid var(--color-gray-2);
-        }
-
-        .comment-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 1rem;
-        }
-
-        .comment-author {
-            font-weight: 700;
-            color: var(--color-text-dark);
-            font-size: 1.8rem;
-        }
-
-        .comment-date {
-            font-size: 1.4rem;
-            color: #888;
-        }
-
-        .comment-content {
-            font-size: 1.6rem;
-            line-height: 1.6;
-            color: var(--color-text-dark);
-        }
-
-        /* Admin Reply */
-        .comment-reply {
-            margin-top: 2rem;
-            margin-left: 4rem;
-            padding: 2rem;
-            background-color: var(--color-gray-1);
-            border-left: 3px solid var(--color-1);
-            border-radius: 0 8px 8px 0;
-        }
-
-        .comment-reply-header {
-            font-weight: 700;
-            color: var(--color-1);
-            margin-bottom: 0.5rem;
-            font-size: 1.3rem;
-            text-transform: uppercase;
-            letter-spacing: 0.1rem;
-        }
-
-        /* Comment Form */
-        .comment-form-section {
-            padding-top: var(--vspace-3);
-            margin-bottom: var(--vspace-4);
-        }
-
-        .comment-form-section h4 {
-            margin-bottom: 3rem;
-        }
-
-        .comment-form input,
-        .comment-form textarea {
-            width: 100%;
-            background: #fdfdfd;
-            border: 1px solid #ddd;
-            padding: 1.5rem 2rem;
-            border-radius: 8px;
-            margin-bottom: 2rem;
-            transition: all 0.3s ease;
-            font-size: 1.6rem;
-        }
-
-        .comment-form input:focus,
-        .comment-form textarea:focus {
-            border-color: var(--color-1);
-            outline: none;
-            background: #fff;
-            box-shadow: 0 0 0 4px rgba(63, 136, 92, 0.1);
-        }
-
-        .comment-form .btn {
-            width: 100%;
-            cursor: pointer;
-        }
-
-        #comment-status {
-            font-size: 1.5rem;
-            font-weight: 500;
-        }
-    </style>
 
     <!-- favicons
     ================================================== -->
@@ -389,10 +171,9 @@
 
             <div class="row">
                 <div class="column lg-12">
-                    <div class="article-content" id="article-content"
-                        style="text-align: justify; color: var(--color-text-dark);">
-                        <p class="skeleton" style="height: 100px;">&nbsp;</p>
-                        <p class="skeleton" style="height: 80px;">&nbsp;</p>
+                    <div class="article-content text-justify color-text-dark">
+                        <p class="skeleton" class="skeleton h-100">&nbsp;</p>
+                        <p class="skeleton" class="skeleton h-80">&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -403,7 +184,7 @@
                     <h3 id="comments-count">0 Comments</h3>
 
                     <div id="comments-list-container">
-                        <p style="color: #888;">Loading comments...</p>
+                        <p class="color-gray-888">Loading comments...</p>
                     </div>
 
                     <div class="comment-form-section">
@@ -471,7 +252,7 @@
                         <li>
                             <a href="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    style="fill:rgba(0, 0, 0, 1);">
+                                    class="fill-black">
                                     <path
                                         d="M20,3H4C3.447,3,3,3.448,3,4v16c0,0.552,0.447,1,1,1h8.615v-6.96h-2.338v-2.725h2.338v-2c0-2.325,1.42-3.592,3.5-3.592 c0.699-0.002,1.399,0.034,2.095,0.107v2.42h-1.435c-1.128,0-1.348,0.538-1.348,1.325v1.735h2.697l-0.35,2.725h-2.348V21H20 c0.553,0,1-0.448,1-1V4C21,3.448,20.553,3,20,3z">
                                     </path>
@@ -482,7 +263,7 @@
                         <li>
                             <a href="#0">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    style="fill:rgba(0, 0, 0, 1);">
+                                    class="fill-black">
                                     <path
                                         d="M18.161 2H21.5L14.07 10.49L22.8 22H15.901L10.497 14.921L4.316 22H0.976L8.851 13.012L0.5 2H7.568L12.457 8.455L18.161 2ZM16.98 20.005H18.831L6.417 3.905H4.431L16.98 20.005Z">
                                     </path>
@@ -493,7 +274,7 @@
                         <li>
                             <a href="#0">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 22 22"
-                                    style="fill:rgba(0, 0, 0, 1);">
+                                    class="fill-black">
                                     <path
                                         d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
                                     </path>
@@ -532,8 +313,7 @@
         <div id="cookie-banner" class="cookie-banner">
             <h4>We Value Your Privacy</h4>
             <p>We use cookies to enhance your browsing experience and analyze our traffic. By clicking "Accept", you
-                consent to our use of cookies. <a href="legal.html"
-                    style="color: var(--color-1); text-decoration: underline;">Learn more</a></p>
+                consent to our use of cookies. <a href="legal.html" class="link-primary-underline">Learn more</a></p>
             <div class="cookie-banner__buttons">
                 <button class="cookie-banner__btn cookie-banner__btn--accept" onclick="acceptCookies()">Accept</button>
                 <button class="cookie-banner__btn cookie-banner__btn--decline"
@@ -670,7 +450,7 @@
                         contentEl.innerHTML = `
                             <div class="alert-box alert-box--error">
                                 <p>Désolé, l'article n'a pas pu être chargé. (${error.message})</p>
-                                <p><a href="news.html" style="color: white; text-decoration: underline;">Retour aux news</a></p>
+                                <p><a href="news.html" class="link-decoration-white">Retour aux news</a></p>
                             </div>
                         `;
                     }
