--- a/index.html
+++ b/index.html
@@ -265,14 +265,14 @@
                     <div class="column lg-12 s-intro__content-inner">
                         <div class="s-intro__content-left">
                             <h1 class="s-intro__content-title">
-                                Digital & Social Media <br>
-                                Agency Mauritius
+                                Your digital partner in Mauritius. <br>
+                                Zero fluff, pure strategy.
                             </h1>
                         </div>
                         <div class="s-intro__content-right">
                             <p class="s-intro__content-desc body-text-2">
-                                Professional Community Management & Graphic Design in Mauritius.
-                                We transform your vision into a compelling visual identity that engages your audience.
+                                Stop bland design. Stop ghost posts. We create the identity that makes people react, not
+                                yawn. Mauritius.
                             </p>
 
                             <div class="s-intro__content-buttons">
@@ -389,13 +389,9 @@
                             Driving Growth & Visibility</div>
                         <h5>Target: SMEs & Local Businesses</h5>
                         <p class="max-w-800-center">
-                            We turn quiet businesses into market leaders. By blending strategic visibility with
-                            precision targeting,
-                            we don't just put your brand on a screen—we put it in front of the right customers at the
-                            right time.
-                            We bridge the gap between your products and your future loyal clients, transforming your
-                            digital
-                            presence into a powerful engine for real-world growth.
+                            Your competitors aren't better than you. They're just louder. We fix that. We take
+                            businesses nobody talks about and turn them into the ones everyone wants. Not with
+                            tricks, with strategy that actually sells.
                         </p>
                     </div>
                 </div>
@@ -406,13 +402,9 @@
                             Elevating Brand Authority</div>
                         <h5>Target: Established Brands & Busy Professionals</h5>
                         <p class="max-w-800-center">
-                            We protect and project your reputation 24/7. Your social media is your most important
-                            storefront,
-                            and we ensure it never skips a beat. From high-end storytelling to proactive community
-                            engagement,
-                            we manage the noise so you can focus on the vision. We keep your brand relevant, your
-                            audience
-                            informed, and your professional image impeccable.
+                            While you're closing deals and shipping products, who's watching your brand? We are. 24/7.
+                            Because one ignored comment can cost you a client, and one perfect response can earn you ten
+                            more. We're the team your audience never sees but always feels.
                         </p>
                     </div>
                 </div>
@@ -423,16 +415,28 @@
                             The Startup Launchpad</div>
                         <h5>Target: Innovators & Visionary Entrepreneurs</h5>
                         <p class="max-w-800-center">
-                            We turn "what if" into "we are live." Launching a startup is a marathon of technical and
-                            creative
-                            hurdles; we are here to clear the path. From crafting your visual identity to building your
-                            first
-                            high-conversion digital home, we handle the heavy lifting. We don’t just launch websites; we
-                            launch dreams with a solid foundation and non-stop momentum.
+                            Every empire started with someone scared to hit publish. We've seen brilliant ideas die in
+                            Google Docs and average ones scale to six figures. The difference? Execution. We're the team
+                            that turns your vision into something clickable, buyable, and real.
                         </p>
                     </div>
                 </div>
 
+                <!-- cta-callout
+            ----------------------------------------------- -->
+                <section class="s-cta-callout">
+                    <div class="row row-x-center text-center">
+                        <div class="column lg-10 md-12">
+                            <h2 class="s-cta-callout__title">
+                                You're here for a reason. Your brand is ready for more. <br>
+                                Stop waiting and start building.
+                            </h2>
+                            <div class="s-cta-callout__buttons">
+                                <a href="#contact" class="btn btn--primary smoothscroll">Let's build your identity</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
                 <!-- intro info -->
                 <div class="s-about__info">
@@ -498,17 +502,13 @@
                 <div class="row s-about__screens-block">
                     <div class="column lg-12">
 
-                        <div class="swiper-container s-about__screens-slider">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide s-about__screen-slide">
-                                    <img src="https://cdn.dribbble.com/userupload/37375248/file/original-9953fa3a7b437f7f0289437077b119a7.png?resize=752x564&vertical=center"
-                                        alt="Creaty Advantage Image 1" loading="lazy">
-                                </div>
-                                <div class="swiper-slide s-about__screen-slide">
-                                    <img src="https://cdn.dribbble.com/userupload/43115879/file/original-a5073467206f595e552fffbb124acb3c.webp?resize=1024x768&vertical=center"
-                                        alt="Creaty Advantage Image 2" loading="lazy">
-                                </div>
-                            </div>
+                        <div class="s-about__video-block">
+                            <video autoplay muted loop playsinline class="s-about__video" preload="auto">
+                                <source
+                                    src="https://cdn.dribbble.com/userupload/46018280/file/116872959f12f4f187c89e2493674c71.mp4"
+                                    type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
 
                     </div>
