--- a/legal/index.html
+++ b/legal/index.html
@@ -14,7 +14,7 @@
         content="Terms and Conditions for Creaty digital agency services. Learn about our policies, privacy, and intellectual property rights. Operated by Creativfolio Ltd in Mauritius.">
     <meta name="author" content="Creaty - Creativfolio Ltd">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://creaty.mu/legal.html">
+    <link rel="canonical" href="https://creaty.mu/legal">
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -23,8 +23,8 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/vendor.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
 
     <style>
@@ -85,12 +85,12 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#ffffff">
 
 </head>
@@ -120,8 +120,8 @@
 
                 <div class="s-header__block">
                     <div class="s-header__logo">
-                        <a class="logo" href="index.html">
-                            <img src="images/creaty.logo.svg" alt="Homepage">
+                        <a class="logo" href="/">
+                            <img src="/images/creaty.logo.svg" alt="Homepage">
                         </a>
                     </div>
 
@@ -130,16 +130,16 @@
 
                 <nav class="s-header__nav">
                     <ul>
-                        <li><a href="index.html#intro">Intro</a></li>
-                        <li><a href="index.html#about">About</a></li>
-                        <li><a href="index.html#pricing">Pricing</a></li>
-                        <li><a href="index.html#faq">FAQ</a></li>
-                        <li><a href="news.html">News</a></li>
+                        <li><a href="/#intro">Intro</a></li>
+                        <li><a href="/#about">About</a></li>
+                        <li><a href="/#pricing">Pricing</a></li>
+                        <li><a href="/#faq">FAQ</a></li>
+                        <li><a href="/news">News</a></li>
                     </ul>
                 </nav>
 
                 <div class="s-header__cta">
-                    <a href="index.html#contact" class="btn btn--primary s-header__cta-btn">Contact us</a>
+                    <a href="/#contact" class="btn btn--primary s-header__cta-btn">Contact us</a>
                 </div>
 
             </div> <!-- end s-header__inner -->
@@ -156,7 +156,7 @@
 
                     <div class="legal-content">
 
-                        <a href="index.html" class="legal-back">
+                        <a href="/" class="legal-back">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path
                                     d="M12.707 17.293L8.414 13H18v-2H8.414l4.293-4.293-1.414-1.414L4.586 12l6.707 6.707z">
@@ -229,8 +229,8 @@
             <div class="row s-footer__bottom">
                 <div class="column lg-5 md-6 stack-on-900">
                     <div class="footer__logo">
-                        <a href="index.html">
-                            <img src="images/creaty.logo.svg" alt="Homepage">
+                        <a href="/">
+                            <img src="/images/creaty.logo.svg" alt="Homepage">
                         </a>
                     </div>
 
@@ -242,12 +242,12 @@
 
                 <div class="column lg-6 stack-on-900 end">
                     <ul class="s-footer__site-links">
-                        <li><a href="index.html#intro">Intro</a></li>
-                        <li><a href="index.html#about">About</a></li>
-                        <li><a href="index.html#pricing">Pricing</a></li>
-                        <li><a href="index.html#faq">FAQ</a></li>
-                        <li><a href="news.html">News</a></li>
-                        <li><a href="legal.html">Terms</a></li>
+                        <li><a href="/#intro">Intro</a></li>
+                        <li><a href="/#about">About</a></li>
+                        <li><a href="/#pricing">Pricing</a></li>
+                        <li><a href="/#faq">FAQ</a></li>
+                        <li><a href="/news">News</a></li>
+                        <li><a href="/legal">Terms</a></li>
                     </ul>
 
                     <p class="s-footer__contact">
@@ -269,7 +269,7 @@
         <div id="cookie-banner" class="cookie-banner">
             <h4>We Value Your Privacy</h4>
             <p>We use cookies to enhance your browsing experience and analyze our traffic. By clicking "Accept", you
-                consent to our use of cookies. <a href="legal.html"
+                consent to our use of cookies. <a href="/legal"
                     style="color: var(--color-1); text-decoration: underline;">Learn more</a></p>
             <div class="cookie-banner__buttons">
                 <button class="cookie-banner__btn cookie-banner__btn--accept" onclick="acceptCookies()">Accept</button>
@@ -317,10 +317,10 @@
 
         <!-- Java Script
     ================================================== -->
-        <script src="js/plugins.js"></script>
-        <script src="js/config.js"></script>
-        <script src="js/promo.js"></script>
-        <script src="js/main.js"></script>
+        <script src="/js/plugins.js"></script>
+        <script src="/js/config.js"></script>
+        <script src="/js/promo.js"></script>
+        <script src="/js/main.js"></script>
 
 </body>
 
