fix routing and remove .html

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
                 <div class="s-header__block">
                     <div class="s-header__logo">
-                        <a class="logo" href="index.html">
+                        <a class="logo" href="/">
                             <img src="images/creaty.logo.svg" alt="Homepage">
                         </a>
                     </div>
@@ -235,8 +235,8 @@
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#pricing" class="smoothscroll">Pricing</a></li>
                         <li><a href="#faq" class="smoothscroll">FAQ</a></li>
-                        <li><a href="news.html">News</a></li>
-                        <li><a href="legal.html">Terms</a></li>
+                        <li><a href="/news">News</a></li>
+                        <li><a href="/legal">Terms</a></li>
                     </ul>
                 </nav>
 
@@ -1212,8 +1212,8 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#pricing">Pricing</a></li>
                         <li><a href="#faq">FAQ</a></li>
-                        <li><a href="news.html">News</a></li>
-                        <li><a href="legal.html">Terms</a></li>
+                        <li><a href="/news">News</a></li>
+                        <li><a href="/legal">Terms</a></li>
                     </ul>
 
                     <p class="s-footer__contact">
@@ -1236,7 +1236,7 @@
         <div id="cookie-banner" class="cookie-banner">
             <h4>We Value Your Privacy</h4>
             <p>We use cookies to enhance your browsing experience and analyze our traffic. By clicking "Accept", you
-                consent to our use of cookies. <a href="legal.html" class="link-primary-underline">Learn more</a></p>
+                consent to our use of cookies. <a href="/legal" class="link-primary-underline">Learn more</a></p>
             <div class="cookie-banner__buttons">
                 <button class="cookie-banner__btn cookie-banner__btn--accept" onclick="acceptCookies()">Accept</button>
                 <button class="cookie-banner__btn cookie-banner__btn--decline"
